--- a/style.css
+++ b/style.css
@@ -19,10 +19,8 @@ body{
     height: 130px;
     margin-bottom: 50px;
     background:#eb1768;
-    position: absolute;
-    bottom: 135%;
-    right: 0;
-    left: 0;
+    position: relative;
+    z-index: 1;    
 }
 
 .our-team .pic:before{
@@ -33,6 +31,52 @@ body{
  bottom: 135%;
  right:0;
  left:0 ;
-    
+transform: scale(3);
+transition: all 0.3s linear 0s;    
 }
+
+.our-team:hover .pic:before{
+    height: 100% ;
+}
+
+.our-team .pic:after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    border: radius 50%;
+    background: #ee4266;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+}
+
+.our-team .pic img{
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    transform: scale(1);
+    transition: all 0.9s ease 0s;
+
+}
+
+
+.our-team:hover .pic img{
+    box-shadow: 0 0 0 14px #f7f5ec;
+    transform: scale(0.7)
+}
+
+
+.our-team .team-content{
+    margin-bottom: 30px;
+}
+
+
+.our-team .title{
+    font-size: 22px;
+    font-weight: 700;
+    color: #4e5052;
+}
+
 
